// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 test with Sulfuras item 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Sulfuras, Hand of Ragnaros avec une qualité de 80",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`2 test with Aged Brie updated 1x with 10 for sellIn and quality 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Aged Brie avec une qualité de 10",
  "La qualité augmente de 1, elle est maintenant de 11",
  "SellIn prend -1 et est maintenant de 9",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`3 test with Aged Brie when sellIn is negative 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Aged Brie avec une qualité de 10",
  "La qualité augmente de 1, elle est maintenant de 11",
  "SellIn prend -1 et est maintenant de 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Aged Brie avec une qualité de 11",
  "La qualité augmente de 1, elle est maintenant de 12",
  "SellIn prend -1 et est maintenant de 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Aged Brie avec une qualité de 12",
  "La qualité augmente de 1, elle est maintenant de 13",
  "SellIn prend -1 et est maintenant de -1",
  "Délai de vente dépassé",
  "La qualité de Aged Brie augmente quand même",
  "La qualité augmente de 1, elle est maintenant de 14",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`4 test with Backstage passes to a TAFKAL80ETC concert when 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 10",
  "La qualité augmente de 1, elle est maintenant de 11",
  "SellIn est égal à 5",
  "SellIn est inférieur à 11",
  "La qualité augmente de 1, elle est maintenant de 12",
  "SellIn est inférieur à 6",
  "La qualité augmente de 1, elle est maintenant de 13",
  "SellIn prend -1 et est maintenant de 4",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 13",
  "La qualité augmente de 1, elle est maintenant de 14",
  "SellIn est égal à 4",
  "SellIn est inférieur à 11",
  "La qualité augmente de 1, elle est maintenant de 15",
  "SellIn est inférieur à 6",
  "La qualité augmente de 1, elle est maintenant de 16",
  "SellIn prend -1 et est maintenant de 3",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`5 test with Backstage passes to a TAFKAL80ETC concert when sellIn is negative 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 10",
  "La qualité augmente de 1, elle est maintenant de 11",
  "SellIn est égal à 2",
  "SellIn est inférieur à 11",
  "La qualité augmente de 1, elle est maintenant de 12",
  "SellIn est inférieur à 6",
  "La qualité augmente de 1, elle est maintenant de 13",
  "SellIn prend -1 et est maintenant de 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 13",
  "La qualité augmente de 1, elle est maintenant de 14",
  "SellIn est égal à 1",
  "SellIn est inférieur à 11",
  "La qualité augmente de 1, elle est maintenant de 15",
  "SellIn est inférieur à 6",
  "La qualité augmente de 1, elle est maintenant de 16",
  "SellIn prend -1 et est maintenant de 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 16",
  "La qualité augmente de 1, elle est maintenant de 17",
  "SellIn est égal à 0",
  "SellIn est inférieur à 11",
  "La qualité augmente de 1, elle est maintenant de 18",
  "SellIn est inférieur à 6",
  "La qualité augmente de 1, elle est maintenant de 19",
  "SellIn prend -1 et est maintenant de -1",
  "Délai de vente dépassé",
  "Délai de vente dépassé : la qualité de Backstage passes to a TAFKAL80ETC concert est maintenant de 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`6 test with several items when quality goes over 50 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 48",
  "La qualité augmente de 1, elle est maintenant de 49",
  "SellIn est égal à 15",
  "SellIn prend -1 et est maintenant de 14",
  "Item n° 2 - nom : Aged Brie avec une qualité de 48",
  "La qualité augmente de 1, elle est maintenant de 49",
  "SellIn prend -1 et est maintenant de 7",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 49",
  "La qualité augmente de 1, elle est maintenant de 50",
  "SellIn est égal à 14",
  "SellIn prend -1 et est maintenant de 13",
  "Item n° 2 - nom : Aged Brie avec une qualité de 49",
  "La qualité augmente de 1, elle est maintenant de 50",
  "SellIn prend -1 et est maintenant de 6",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 50",
  "SellIn prend -1 et est maintenant de 12",
  "Item n° 2 - nom : Aged Brie avec une qualité de 50",
  "SellIn prend -1 et est maintenant de 5",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 50",
  "SellIn prend -1 et est maintenant de 11",
  "Item n° 2 - nom : Aged Brie avec une qualité de 50",
  "SellIn prend -1 et est maintenant de 4",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`7 test quality under 50 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de -4",
  "La qualité augmente de 1, elle est maintenant de -3",
  "SellIn est égal à 15",
  "SellIn prend -1 et est maintenant de 14",
  "Item n° 2 - nom : Aged Brie avec une qualité de 23",
  "La qualité augmente de 1, elle est maintenant de 24",
  "SellIn prend -1 et est maintenant de 7",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de -3",
  "La qualité augmente de 1, elle est maintenant de -2",
  "SellIn est égal à 14",
  "SellIn prend -1 et est maintenant de 13",
  "Item n° 2 - nom : Aged Brie avec une qualité de 24",
  "La qualité augmente de 1, elle est maintenant de 25",
  "SellIn prend -1 et est maintenant de 6",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de -2",
  "La qualité augmente de 1, elle est maintenant de -1",
  "SellIn est égal à 13",
  "SellIn prend -1 et est maintenant de 12",
  "Item n° 2 - nom : Aged Brie avec une qualité de 25",
  "La qualité augmente de 1, elle est maintenant de 26",
  "SellIn prend -1 et est maintenant de 5",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de -1",
  "La qualité augmente de 1, elle est maintenant de 0",
  "SellIn est égal à 12",
  "SellIn prend -1 et est maintenant de 11",
  "Item n° 2 - nom : Aged Brie avec une qualité de 26",
  "La qualité augmente de 1, elle est maintenant de 27",
  "SellIn prend -1 et est maintenant de 4",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`99 test with conjured 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 3",
  "La qualité diminue de 1, elle est maintenant de 2",
  "SellIn prend -1 et est maintenant de 14",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 2",
  "La qualité diminue de 1, elle est maintenant de 1",
  "SellIn prend -1 et est maintenant de 13",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 1",
  "La qualité diminue de 1, elle est maintenant de 0",
  "SellIn prend -1 et est maintenant de 12",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 0",
  "SellIn prend -1 et est maintenant de 11",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`99 test with conjured 2`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 45",
  "La qualité diminue de 1, elle est maintenant de 44",
  "SellIn prend -1 et est maintenant de 2",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 44",
  "La qualité diminue de 1, elle est maintenant de 43",
  "SellIn prend -1 et est maintenant de 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 43",
  "La qualité diminue de 1, elle est maintenant de 42",
  "SellIn prend -1 et est maintenant de 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item n° 1 - nom : Conjured avec une qualité de 42",
  "La qualité diminue de 1, elle est maintenant de 41",
  "SellIn prend -1 et est maintenant de -1",
  "Délai de vente dépassé",
  "La qualité diminue de 1, elle est maintenant de 40",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;
